--- a/src/modules/section/_style.scss
+++ b/src/modules/section/_style.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   min-height: 70rem;
+  padding: 7rem 0;
 
   // modifiers
   &.background-blue,
